--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
 }
 </script>
 <link rel="stylesheet" href="./index.css">
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('./sw.js')
+        .then((registration) => {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        })
+        .catch((error) => {
+          console.log('ServiceWorker registration failed: ', error);
+        });
+    });
+  }
+</script>
 </head>
   <body>
     <div id="root"></div>
