chore: add capacitor and service worker for APK build

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </script>
     <style>
       body {
-        background-color: #f8fafc; /* Slate 50 */
+        background-color: #f8fafc;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
@@ -43,7 +43,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="./index.css">
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
